MDEC-2 Drone moves in circle

--- a/assets/css/base-styles.css
+++ b/assets/css/base-styles.css
@@ -3,6 +3,17 @@
     padding: 0;
 }
 
+html {
+    font-size: 16px;
+}
+
 #root {
     height: 100%;
+}
+
+.drone-marker {
+    width: 1.5rem;
+    height: 1.5rem;
+    position: absolute;
+    background: url('/images/drone-icon.svg') no-repeat center / cover;
 }
