--- a/client/public/css/base-styles.css
+++ b/client/public/css/base-styles.css
@@ -11,6 +11,18 @@ html {
     height: 100%;
 }
 
+.overview {
+    position: absolute;
+    background: white;
+    border-radius: 2rem;
+    height: 20rem;
+    width: 10rem;
+    box-shadow: 0 0.25rem 0.75rem 0 rgba(0, 0, 0, 0.1);
+    top: 0;
+    right: 0;
+    margin: 2rem;
+}
+
 .drone-marker {
     width: 3rem;
     height: 3rem;
