--- a/client/src/styles/base-styles.scss
+++ b/client/src/styles/base-styles.scss
@@ -16,11 +16,11 @@ html {
     background: white;
     border-radius: 2rem;
     height: 20rem;
-    width: 10rem;
+    width: 15rem;
     box-shadow: 0 0.25rem 0.75rem 0 rgba(0, 0, 0, 0.1);
     top: 0;
     right: 0;
-    margin: 2rem;
+    margin: 3rem 3.25rem;
 }
 
 .drone-marker {
