--- a/client/src/styles/base-styles.scss
+++ b/client/src/styles/base-styles.scss
@@ -12,6 +12,7 @@
 }
 
 html {
+    background-color: hsl(161, 10%, 97%);
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     font-size: 16px;
     color: rgb(120, 120, 120);
@@ -49,9 +50,14 @@ h2 {
         padding: 1rem 1.25rem;
     }
 
+    h1 {
+        padding-top: 1.25rem;
+        padding-bottom: 0.25rem;
+    }
+
     .section {
         cursor: pointer;
-        transition: background-color 200ms;
+        transition: background-color 250ms;
 
         h2 {
             margin-bottom: 0.5rem;
@@ -67,6 +73,10 @@ h2 {
         
         &:hover {
             background-color: rgb(250, 250, 250);
+        }
+
+        &:active {
+            background-color: rgb(248, 248, 248);
         }
     }
 }
