--- a/client/src/styles/base-styles.scss
+++ b/client/src/styles/base-styles.scss
@@ -7,8 +7,13 @@ html {
     font-size: 16px;
 }
 
+body {
+    background: blue;
+}
+
 #root {
     height: 100%;
+    width: 100vw;
 }
 
 .overview {
