--- a/client/src/styles/base-styles.scss
+++ b/client/src/styles/base-styles.scss
@@ -7,10 +7,6 @@ html {
     font-size: 16px;
 }
 
-body {
-    background: blue;
-}
-
 #root {
     height: 100%;
 }
@@ -32,4 +28,11 @@ body {
     height: 3rem;
     position: absolute;
     background: url('/images/drone-icon.svg') no-repeat center / cover;
+}
+
+.target-marker {
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    background: url('/images/target-icon.svg') no-repeat center / cover;
 }
