--- a/client/src/styles/base-styles.scss
+++ b/client/src/styles/base-styles.scss
@@ -86,6 +86,7 @@ h2 {
     height: 3rem;
     position: absolute;
     background: url('/images/drone-icon.svg') no-repeat center / cover;
+    cursor: pointer;
 }
 
 .target-marker {
