--- a/client/src/styles/base-styles.scss
+++ b/client/src/styles/base-styles.scss
@@ -45,6 +45,10 @@ h2 {
     right: 0;
     margin: 3rem 3.25rem;
     overflow: hidden;
+
+    @media screen and (max-width: 800px) {
+        display: none;
+    }
     
     > * {
         padding: 1rem 1.25rem;
